# R-Type

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTE.md  Dockerfile  LICENSE.md  Makefile  README.md  annotated.html  classes.html  concepts.html  config.ini.in  dir_000000_000007.html  dir_000000_000008.html  dir_000002_000004.html  dir_000003_000005.html  dir_000004_000001.html  dir_000005_000002.html  dir_000005_000004.html  dir_000005_000008.html  dir_000006_000001.html  dir_000006_000003.html  dir_000006_000005.html  dir_000006_000007.html  dir_000006_000009.html  dir_000006_000016.html  dir_000007_000008.html  dir_000008_000015.html  dir_000009_000016.html  dir_000010_000001.html  dir_000010_000003.html  dir_000010_000005.html  dir_000010_000006.html  dir_000010_000009.html  dir_000010_000017.html  dir_000011_000006.html  dir_000011_000007.html  dir_000012_000000.html  dir_000012_000002.html  (+286 more)
assets/: beamParticle.json  blob.json  boss_parasite.json  boss_projectile.json  bydosWave.json  dobkeratops.json  dobkeratops_segment.json  explosion.json  explosion2.json  leftCollision.json  (+13 more)
client/: CMakeLists.txt
client/include/: game_manager.hpp  room_manager.hpp  rtype_client.hpp
client/src/: ClientTickRate.hpp  GameManager.hpp  GameOptions.cpp  GameOptions.hpp  KeyboardMap.hpp  Metric.hpp  RTypeClient.hpp  RTypeClientConst.hpp  RoomManager.cpp  RoomManager.hpp  ScoreBoard.hpp  create_entity.cpp  create_entity.cpp.old  launch_game.cpp  main.cpp  register_ecs.cpp  register_tcp_response.cpp  register_udp_response.cpp  room_manager.cpp  rtype_client.hpp  run_gui.cpp  setup_tcp_connection.cpp  setup_udp_connection.cpp
client/src/menu/: accessibility.cpp  chat.cpp  inside_room.cpp  option.cpp  room_selection.cpp  scoreBoard.cpp  title_menu.cpp
docs/: CMakeLists.txt  developer-documentation.md  doxy.conf  protocol-documentation.md  rtype-tcp-protocol-rfc.md  rtype-udp-protocol-rfc.md  technical-and-comparative-Study.md
lib/ecs/: CMakeLists.txt  DLLoader.cpp  DLLoader.hpp  IndexedZipper.hpp  IndexedZipperIterator.hpp  Registry.hpp  SparseArray.hpp  Zipper.hpp  ZipperIterator.hpp  entity.hpp
lib/ecs/components/: ai_actor.hpp  ally.hpp  animation.hpp  controllable.hpp  drawable.hpp  enemy.hpp  health.hpp  hitbox.hpp  missile.hpp  position.hpp  share_movement.hpp  shared_entity.hpp  sprite.hpp  tag.hpp  velocity.hpp
lib/ecs/core/: IndexedZipper.hpp  IndexedZipperIterator.hpp  Registry.hpp  SparseArray.hpp  SpriteManager.hpp  Zipper.hpp  ZipperIterator.hpp  constants.hpp  entity.hpp  indexed_zipper.hpp  indexed_zipper_iterator.hpp  input_manager.hpp  registry.hpp  response_handler.hpp  shared_entity.cpp  shared_entity.hpp  sparse_array.hpp  tick_rate_manager.hpp  tracked_exception.hpp  zipper.hpp  zipper_iterator.hpp
lib/ecs/dynamic/: DLLoader.hpp  UnixDLLoader.hpp  WindowsLoader.hpp  loader.hpp
lib/ecs/systems/: ai_act.cpp  ai_act.hpp  colision.cpp  colision.hpp  collision.cpp  collision.hpp  control.cpp  control.hpp  control_move.cpp  control_move.hpp  control_special.cpp  control_special.hpp  draw.cpp  draw.hpp  health_check.cpp  health_check.hpp  missiles_stop.cpp  missiles_stop.hpp  position.cpp  position.hpp  share_movement.cpp  share_movement.hpp  sprite_system.cpp  sprite_system.hpp
lib/factory/: CMakeLists.txt  ClientEntityFactory.cpp  ClientEntityFactory.hpp  EntityFactory.cpp  EntityFactory.hpp  InputManager.hpp  MetricManager.hpp  ServerEntityFactory.cpp  ServerEntityFactory.hpp  SoundManager.cpp  SoundManager.hpp  SpriteManager.hpp  WaveManager.cpp  WaveManager.hpp
lib/factory/components/: ai_actor.hpp  animation.hpp  beam.hpp  client_share_movement.hpp  controllable.hpp  death_split.hpp  death_timer.hpp  dobkeratops.hpp  game_tag.hpp  gravity.hpp  health.hpp  hitbox.hpp  missile.hpp  on_death.hpp  parallax.hpp  particle_spawner.hpp  ping.hpp  player.hpp  score.hpp  self_player.hpp  share_movement.hpp  sound_emitter.hpp  sprite.hpp
lib/factory/systems/: ai_act.cpp  check_game_ending.hpp  check_out_of_range.cpp  client_share_movement.cpp  client_share_movement.hpp  collision.cpp  collision.hpp  control_move.cpp  control_move.hpp  control_special.cpp  control_special.hpp  death_timer.cpp  death_timer.hpp  draw.cpp  draw.hpp  draw_fps.cpp  draw_fps.hpp  draw_game_ending.cpp  draw_game_ending.hpp  draw_particle.cpp  draw_particle.hpp  draw_ping.cpp  draw_ping.hpp  draw_player_beam_bar.cpp  draw_player_beam_bar.hpp  draw_player_health_bar.cpp  draw_player_health_bar.hpp  draw_score.cpp  draw_score.hpp  draw_team_data.cpp  gravity_system.cpp  gravity_system.hpp  health_check.cpp  health_check.hpp  health_mob_check.cpp  health_mob_check.hpp  health_shared_check.cpp  health_shared_check.hpp  missiles_stop.cpp  missiles_stop.hpp  (+16 more)
lib/network/: AsioClient.hpp  AsioServer.hpp  BuffSize.hpp  CMakeLists.txt  IClient.hpp  IServer.hpp  ResponseHandler.hpp  TickRateManager.hpp  TimeoutHandler.hpp
lib/network/tcp/: TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp
lib/network/udp/: UDPClient.cpp  UDPClient.hpp  UDPServer.cpp  UDPServer.hpp
lib/utils/: ArgParser.cpp  ArgParser.hpp  CMakeLists.txt  FrameRateManager.cpp  FrameRateManager.hpp  Logger.cpp  Logger.hpp  RandomGenerator.cpp  RandomGenerator.hpp  SafeList.hpp  TrackedException.cpp  TrackedException.hpp  log.cpp  log.hpp
server/: CMakeLists.txt
server/include/: game_runner.hpp  room_manager.hpp  rtype_server.hpp
server/src/: GameRunner.cpp  GameRunner.hpp  RTypeServer.hpp  RoomManager.cpp  RoomManager.hpp  ServerTickRate.hpp  command_handler.cpp  create_entity.cpp  game_runner.cpp  init_waves.cpp  main.cpp  parse_arg.cpp  register_ecs.cpp  register_tcp_response.cpp  register_udp_response.cpp  room_manager.cpp  rtype_server.hpp
server/src/ais/: dobkeratops_ai.cpp  dobkeratops_ai.hpp  fireRandomMissileAi.cpp  fireRandomMissileAi.hpp  horizontalMoveAi.cpp  horizontalMoveAi.hpp  splitAi.cpp  splitAi.hpp  waveAi.cpp  waveAi.hpp
server/src/gameCallbacks/: collideEffect.cpp  collideEffect.hpp  endGame.cpp  endGame.hpp
server/src/waveCreator/: WaveCreator.cpp  WaveCreator.hpp
(+2239 files in other folders)
